corrected all code formatting

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,50 +1,130 @@
 <nav>
   <a class="link" href="http://thiago-pereira.dev" aria-label="Home">
     <div class="monogram">
-      <svg width="44" height="47" viewBox="0 0 44 47" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <rect width="43.8099" height="46.2667" rx="6" fill="#050505"/>
+      <svg
+        width="44"
+        height="47"
+        viewBox="0 0 44 47"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <rect width="43.8099" height="46.2667" rx="6" fill="#050505"></rect>
         <g filter="url(#filter0_d_2318_10)">
-        <path d="M5.5 17.5L13.5106 13.6831" stroke="#FFFFF4" stroke-width="3"/>
+          <path d="M5.5 17.5L13.5106 13.6831" stroke="#FFFFF4" stroke-width="3"
+          ></path>
         </g>
         <g filter="url(#filter1_d_2318_10)">
-        <path d="M5.5 7.5L14.1256 12.8123" stroke="#FFFFF4" stroke-width="3"/>
+          <path d="M5.5 7.5L14.1256 12.8123" stroke="#FFFFF4" stroke-width="3"
+          ></path>
         </g>
         <g filter="url(#filter2_d_2318_10)">
-        <line x1="16" y1="20.5" x2="26.7906" y2="20.5" stroke="#FFFFF4" stroke-width="3"/>
+          <line
+            x1="16"
+            y1="20.5"
+            x2="26.7906"
+            y2="20.5"
+            stroke="#FFFFF4"
+            stroke-width="3"></line>
         </g>
         <defs>
-        <filter id="filter0_d_2318_10" x="0.915268" y="12.2941" width="17.1801" height="14.595" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-        <feOffset dy="4"/>
-        <feGaussianBlur stdDeviation="2"/>
-        <feComposite in2="hardAlpha" operator="out"/>
-        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
-        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_2318_10"/>
-        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_2318_10" result="shape"/>
-        </filter>
-        <filter id="filter1_d_2318_10" x="0.774139" y="6.17468" width="18.0773" height="15.9629" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-        <feOffset dy="4"/>
-        <feGaussianBlur stdDeviation="2"/>
-        <feComposite in2="hardAlpha" operator="out"/>
-        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
-        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_2318_10"/>
-        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_2318_10" result="shape"/>
-        </filter>
-        <filter id="filter2_d_2318_10" x="12" y="19" width="18.7906" height="11" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-        <feOffset dy="4"/>
-        <feGaussianBlur stdDeviation="2"/>
-        <feComposite in2="hardAlpha" operator="out"/>
-        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
-        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_2318_10"/>
-        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_2318_10" result="shape"/>
-        </filter>
+          <filter
+            id="filter0_d_2318_10"
+            x="0.915268"
+            y="12.2941"
+            width="17.1801"
+            height="14.595"
+            filterUnits="userSpaceOnUse"
+            color-interpolation-filters="sRGB"
+          >
+            <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
+            <feColorMatrix
+              in="SourceAlpha"
+              type="matrix"
+              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+              result="hardAlpha"></feColorMatrix>
+            <feOffset dy="4"></feOffset>
+            <feGaussianBlur stdDeviation="2"></feGaussianBlur>
+            <feComposite in2="hardAlpha" operator="out"></feComposite>
+            <feColorMatrix
+              type="matrix"
+              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
+            ></feColorMatrix>
+            <feBlend
+              mode="normal"
+              in2="BackgroundImageFix"
+              result="effect1_dropShadow_2318_10"></feBlend>
+            <feBlend
+              mode="normal"
+              in="SourceGraphic"
+              in2="effect1_dropShadow_2318_10"
+              result="shape"></feBlend>
+          </filter>
+          <filter
+            id="filter1_d_2318_10"
+            x="0.774139"
+            y="6.17468"
+            width="18.0773"
+            height="15.9629"
+            filterUnits="userSpaceOnUse"
+            color-interpolation-filters="sRGB"
+          >
+            <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
+            <feColorMatrix
+              in="SourceAlpha"
+              type="matrix"
+              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+              result="hardAlpha"></feColorMatrix>
+            <feOffset dy="4"></feOffset>
+            <feGaussianBlur stdDeviation="2"></feGaussianBlur>
+            <feComposite in2="hardAlpha" operator="out"></feComposite>
+            <feColorMatrix
+              type="matrix"
+              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
+            ></feColorMatrix>
+            <feBlend
+              mode="normal"
+              in2="BackgroundImageFix"
+              result="effect1_dropShadow_2318_10"></feBlend>
+            <feBlend
+              mode="normal"
+              in="SourceGraphic"
+              in2="effect1_dropShadow_2318_10"
+              result="shape"></feBlend>
+          </filter>
+          <filter
+            id="filter2_d_2318_10"
+            x="12"
+            y="19"
+            width="18.7906"
+            height="11"
+            filterUnits="userSpaceOnUse"
+            color-interpolation-filters="sRGB"
+          >
+            <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
+            <feColorMatrix
+              in="SourceAlpha"
+              type="matrix"
+              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+              result="hardAlpha"></feColorMatrix>
+            <feOffset dy="4"></feOffset>
+            <feGaussianBlur stdDeviation="2"></feGaussianBlur>
+            <feComposite in2="hardAlpha" operator="out"></feComposite>
+            <feColorMatrix
+              type="matrix"
+              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
+            ></feColorMatrix>
+            <feBlend
+              mode="normal"
+              in2="BackgroundImageFix"
+              result="effect1_dropShadow_2318_10"></feBlend>
+            <feBlend
+              mode="normal"
+              in="SourceGraphic"
+              in2="effect1_dropShadow_2318_10"
+              result="shape"></feBlend>
+          </filter>
         </defs>
-        </svg>
+      </svg>
     </div>
 
     <div class="socials">
@@ -54,13 +134,21 @@
         rel="noopener noreferrer"
         aria-label="Linkedin profile"
       >
-
-      <svg width="40" height="32" viewBox="0 0 40 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <rect y="4" width="28" height="28" rx="2" fill="#FAFAF2"/>
-        <path d="M39.7308 3.16864C39.8239 2.76504 39.5723 2.36235 39.1686 2.26921L32.5915 0.751405C32.1879 0.658265 31.7852 0.909948 31.6921 1.31355C31.5989 1.71716 31.8506 2.11985 32.2542 2.21299L38.1006 3.56215L36.7514 9.4085C36.6583 9.8121 36.9099 10.2148 37.3136 10.3079C37.7172 10.4011 38.1199 10.1494 38.213 9.74578L39.7308 3.16864ZM31.3975 8.636L39.3975 3.636L38.6025 2.364L30.6025 7.364L31.3975 8.636Z" fill="#FAFAF2"/>
-        <path d="M6.04581 25V14.6364H9.34517V25H6.04581ZM7.69886 13.4286C7.23556 13.4286 6.83748 13.2757 6.50462 12.9698C6.17176 12.6594 6.00533 12.2861 6.00533 11.8498C6.00533 11.418 6.17176 11.0491 6.50462 10.7433C6.83748 10.4329 7.23556 10.2777 7.69886 10.2777C8.16667 10.2777 8.56475 10.4329 8.89311 10.7433C9.22597 11.0491 9.3924 11.418 9.3924 11.8498C9.3924 12.2861 9.22597 12.6594 8.89311 12.9698C8.56475 13.2757 8.16667 13.4286 7.69886 13.4286ZM14.5159 19.4006V25H11.3902V15.1818H14.3625V16.9844H14.4711C14.6885 16.3835 15.0592 15.9126 15.5834 15.5717C16.1075 15.2266 16.7318 15.054 17.4562 15.054C18.1466 15.054 18.7453 15.2095 19.2524 15.5206C19.7638 15.8274 20.1601 16.2578 20.4413 16.8118C20.7268 17.3615 20.8675 18.005 20.8632 18.7422V25H17.7375V19.3558C17.7417 18.8104 17.6032 18.3842 17.322 18.0774C17.045 17.7706 16.6594 17.6172 16.165 17.6172C15.8369 17.6172 15.5471 17.6896 15.2957 17.8345C15.0486 17.9751 14.8568 18.1776 14.7204 18.4418C14.5883 18.706 14.5202 19.0256 14.5159 19.4006Z" fill="black"/>
+        <svg
+          width="40"
+          height="32"
+          viewBox="0 0 40 32"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <rect y="4" width="28" height="28" rx="2" fill="#FAFAF2"></rect>
+          <path
+            d="M39.7308 3.16864C39.8239 2.76504 39.5723 2.36235 39.1686 2.26921L32.5915 0.751405C32.1879 0.658265 31.7852 0.909948 31.6921 1.31355C31.5989 1.71716 31.8506 2.11985 32.2542 2.21299L38.1006 3.56215L36.7514 9.4085C36.6583 9.8121 36.9099 10.2148 37.3136 10.3079C37.7172 10.4011 38.1199 10.1494 38.213 9.74578L39.7308 3.16864ZM31.3975 8.636L39.3975 3.636L38.6025 2.364L30.6025 7.364L31.3975 8.636Z"
+            fill="#FAFAF2"></path>
+          <path
+            d="M6.04581 25V14.6364H9.34517V25H6.04581ZM7.69886 13.4286C7.23556 13.4286 6.83748 13.2757 6.50462 12.9698C6.17176 12.6594 6.00533 12.2861 6.00533 11.8498C6.00533 11.418 6.17176 11.0491 6.50462 10.7433C6.83748 10.4329 7.23556 10.2777 7.69886 10.2777C8.16667 10.2777 8.56475 10.4329 8.89311 10.7433C9.22597 11.0491 9.3924 11.418 9.3924 11.8498C9.3924 12.2861 9.22597 12.6594 8.89311 12.9698C8.56475 13.2757 8.16667 13.4286 7.69886 13.4286ZM14.5159 19.4006V25H11.3902V15.1818H14.3625V16.9844H14.4711C14.6885 16.3835 15.0592 15.9126 15.5834 15.5717C16.1075 15.2266 16.7318 15.054 17.4562 15.054C18.1466 15.054 18.7453 15.2095 19.2524 15.5206C19.7638 15.8274 20.1601 16.2578 20.4413 16.8118C20.7268 17.3615 20.8675 18.005 20.8632 18.7422V25H17.7375V19.3558C17.7417 18.8104 17.6032 18.3842 17.322 18.0774C17.045 17.7706 16.6594 17.6172 16.165 17.6172C15.8369 17.6172 15.5471 17.6896 15.2957 17.8345C15.0486 17.9751 14.8568 18.1776 14.7204 18.4418C14.5883 18.706 14.5202 19.0256 14.5159 19.4006Z"
+            fill="black"></path>
         </svg>
-
       </a>
       <a
         href="https://github.com/pereirathi"
@@ -68,16 +156,37 @@
         rel="noopener noreferrer"
         aria-label="Gihub profile"
       >
-      <svg width="40" height="32" viewBox="0 0 40 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <rect y="4" width="28" height="28" rx="2" fill="#FAFAF2"/>
-        <path d="M39.7308 3.16864C39.8239 2.76504 39.5723 2.36235 39.1686 2.26921L32.5915 0.751405C32.1879 0.658265 31.7852 0.909948 31.6921 1.31355C31.5989 1.71716 31.8506 2.11985 32.2542 2.21299L38.1006 3.56215L36.7514 9.4085C36.6583 9.8121 36.9099 10.2148 37.3136 10.3079C37.7172 10.4011 38.1199 10.1494 38.213 9.74578L39.7308 3.16864ZM31.3975 8.636L39.3975 3.636L38.6025 2.364L30.6025 7.364L31.3975 8.636Z" fill="#FAFAF2"/>
-        <rect x="6" y="10" width="16" height="9.88235" rx="4.94118" fill="#090808"/>
-        <line x1="13.8814" y1="23.5322" x2="8.23436" y2="21.6499" stroke="#090909" stroke-width="0.75"/>
-        <path d="M10.5 8L12.6651 11.75H8.33494L10.5 8Z" fill="#0C0C0C"/>
-        <path d="M18.5 8L20.6651 11.75H16.3349L18.5 8Z" fill="#0A0A0A"/>
-        <path d="M12 19H16L15.5 21.625L16 26H12L12.5 21.625L12 19Z" fill="#0F0E0E"/>
+        <svg
+          width="40"
+          height="32"
+          viewBox="0 0 40 32"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <rect y="4" width="28" height="28" rx="2" fill="#FAFAF2"></rect>
+          <path
+            d="M39.7308 3.16864C39.8239 2.76504 39.5723 2.36235 39.1686 2.26921L32.5915 0.751405C32.1879 0.658265 31.7852 0.909948 31.6921 1.31355C31.5989 1.71716 31.8506 2.11985 32.2542 2.21299L38.1006 3.56215L36.7514 9.4085C36.6583 9.8121 36.9099 10.2148 37.3136 10.3079C37.7172 10.4011 38.1199 10.1494 38.213 9.74578L39.7308 3.16864ZM31.3975 8.636L39.3975 3.636L38.6025 2.364L30.6025 7.364L31.3975 8.636Z"
+            fill="#FAFAF2"></path>
+          <rect
+            x="6"
+            y="10"
+            width="16"
+            height="9.88235"
+            rx="4.94118"
+            fill="#090808"></rect>
+          <line
+            x1="13.8814"
+            y1="23.5322"
+            x2="8.23436"
+            y2="21.6499"
+            stroke="#090909"
+            stroke-width="0.75"></line>
+          <path d="M10.5 8L12.6651 11.75H8.33494L10.5 8Z" fill="#0C0C0C"></path>
+          <path d="M18.5 8L20.6651 11.75H16.3349L18.5 8Z" fill="#0A0A0A"></path>
+          <path
+            d="M12 19H16L15.5 21.625L16 26H12L12.5 21.625L12 19Z"
+            fill="#0F0E0E"></path>
         </svg>
-        
       </a>
       <a
         href="mailto:pereirathi886@gmail.com"
@@ -85,13 +194,21 @@
         rel="noopener noreferrer"
         aria-label="Email"
       >
-
-      <svg width="40" height="31" viewBox="0 0 40 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <rect y="3" width="28" height="28" rx="2" fill="#FAFAF2"/>
-        <path d="M39.7308 3.16864C39.8239 2.76504 39.5723 2.36235 39.1686 2.26921L32.5915 0.751405C32.1879 0.658265 31.7852 0.909948 31.6921 1.31355C31.5989 1.71716 31.8506 2.11985 32.2542 2.21299L38.1006 3.56215L36.7514 9.4085C36.6583 9.8121 36.9099 10.2148 37.3136 10.3079C37.7172 10.4011 38.1199 10.1494 38.213 9.74578L39.7308 3.16864ZM31.3975 8.636L39.3975 3.636L38.6025 2.364L30.6025 7.364L31.3975 8.636Z" fill="#FAFAF2"/>
-        <path d="M9.22569 8.12C9.52969 8.12 10.1217 8.448 11.0017 9.104C11.8977 9.744 12.3457 10.224 12.3457 10.544C12.3457 11.104 12.5297 12.024 12.8977 13.304C13.2657 14.584 13.6897 15.744 14.1697 16.784C14.6497 16.224 15.4577 15.192 16.5937 13.688C17.7457 12.168 18.7137 10.968 19.4977 10.088C20.2817 9.208 20.8657 8.768 21.2497 8.768C21.6337 8.768 22.0337 8.984 22.4497 9.416C22.8657 9.848 23.0737 10.28 23.0737 10.712C23.0737 11.144 23.0097 11.704 22.8817 12.392C22.7537 13.064 22.6097 13.696 22.4497 14.288C22.3057 14.864 22.0897 15.656 21.8017 16.664C21.5297 17.672 21.3137 18.472 21.1537 19.064C21.0097 19.64 20.8577 20.264 20.6977 20.936C20.5377 21.592 20.4097 22.112 20.3137 22.496C20.2337 22.864 20.1377 23.256 20.0257 23.672C19.9297 24.072 19.8417 24.384 19.7617 24.608C19.6817 24.816 19.5937 25.008 19.4977 25.184C19.3217 25.52 19.0737 25.688 18.7537 25.688C18.4337 25.688 18.1137 25.376 17.7937 24.752C17.4897 24.112 17.3377 23.448 17.3377 22.76C17.3377 21.064 17.8257 18.816 18.8017 16.016C18.5297 16.368 18.1377 16.888 17.6257 17.576C17.1137 18.248 16.7297 18.744 16.4737 19.064C16.2337 19.368 15.9297 19.728 15.5617 20.144C14.9057 20.864 14.2657 21.224 13.6417 21.224C12.8097 21.224 12.2177 20.896 11.8657 20.24C11.6897 19.904 11.4497 19.152 11.1457 17.984C10.8577 16.8 10.6497 15.984 10.5217 15.536C10.3137 17.184 10.0337 18.68 9.68169 20.024C9.32969 21.368 9.09769 22.248 8.98569 22.664C8.87369 23.08 8.72169 23.584 8.52969 24.176C8.20969 25.184 7.92169 25.688 7.66569 25.688C7.37769 25.688 6.97769 25.312 6.46569 24.56C5.96969 23.792 5.72169 23.192 5.72169 22.76C5.72169 22.328 6.18569 20.168 7.11369 16.28C8.05769 12.392 8.52969 9.936 8.52969 8.912C8.52969 8.384 8.76169 8.12 9.22569 8.12Z" fill="black"/>
+        <svg
+          width="40"
+          height="31"
+          viewBox="0 0 40 31"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <rect y="3" width="28" height="28" rx="2" fill="#FAFAF2"></rect>
+          <path
+            d="M39.7308 3.16864C39.8239 2.76504 39.5723 2.36235 39.1686 2.26921L32.5915 0.751405C32.1879 0.658265 31.7852 0.909948 31.6921 1.31355C31.5989 1.71716 31.8506 2.11985 32.2542 2.21299L38.1006 3.56215L36.7514 9.4085C36.6583 9.8121 36.9099 10.2148 37.3136 10.3079C37.7172 10.4011 38.1199 10.1494 38.213 9.74578L39.7308 3.16864ZM31.3975 8.636L39.3975 3.636L38.6025 2.364L30.6025 7.364L31.3975 8.636Z"
+            fill="#FAFAF2"></path>
+          <path
+            d="M9.22569 8.12C9.52969 8.12 10.1217 8.448 11.0017 9.104C11.8977 9.744 12.3457 10.224 12.3457 10.544C12.3457 11.104 12.5297 12.024 12.8977 13.304C13.2657 14.584 13.6897 15.744 14.1697 16.784C14.6497 16.224 15.4577 15.192 16.5937 13.688C17.7457 12.168 18.7137 10.968 19.4977 10.088C20.2817 9.208 20.8657 8.768 21.2497 8.768C21.6337 8.768 22.0337 8.984 22.4497 9.416C22.8657 9.848 23.0737 10.28 23.0737 10.712C23.0737 11.144 23.0097 11.704 22.8817 12.392C22.7537 13.064 22.6097 13.696 22.4497 14.288C22.3057 14.864 22.0897 15.656 21.8017 16.664C21.5297 17.672 21.3137 18.472 21.1537 19.064C21.0097 19.64 20.8577 20.264 20.6977 20.936C20.5377 21.592 20.4097 22.112 20.3137 22.496C20.2337 22.864 20.1377 23.256 20.0257 23.672C19.9297 24.072 19.8417 24.384 19.7617 24.608C19.6817 24.816 19.5937 25.008 19.4977 25.184C19.3217 25.52 19.0737 25.688 18.7537 25.688C18.4337 25.688 18.1137 25.376 17.7937 24.752C17.4897 24.112 17.3377 23.448 17.3377 22.76C17.3377 21.064 17.8257 18.816 18.8017 16.016C18.5297 16.368 18.1377 16.888 17.6257 17.576C17.1137 18.248 16.7297 18.744 16.4737 19.064C16.2337 19.368 15.9297 19.728 15.5617 20.144C14.9057 20.864 14.2657 21.224 13.6417 21.224C12.8097 21.224 12.2177 20.896 11.8657 20.24C11.6897 19.904 11.4497 19.152 11.1457 17.984C10.8577 16.8 10.6497 15.984 10.5217 15.536C10.3137 17.184 10.0337 18.68 9.68169 20.024C9.32969 21.368 9.09769 22.248 8.98569 22.664C8.87369 23.08 8.72169 23.584 8.52969 24.176C8.20969 25.184 7.92169 25.688 7.66569 25.688C7.37769 25.688 6.97769 25.312 6.46569 24.56C5.96969 23.792 5.72169 23.192 5.72169 22.76C5.72169 22.328 6.18569 20.168 7.11369 16.28C8.05769 12.392 8.52969 9.936 8.52969 8.912C8.52969 8.384 8.76169 8.12 9.22569 8.12Z"
+            fill="black"></path>
         </svg>
-
       </a>
     </div>
   </a>
