--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,5 @@
 ---
-import GoogleAnalytics from '../components/GoogleAnalytics.astro';
+import GoogleAnalytics from "../components/GoogleAnalytics.astro";
 export interface Props {
   title: string;
 }
@@ -7,7 +7,7 @@ export interface Props {
 const { title } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
@@ -16,9 +16,12 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap"
+      rel="stylesheet"
+    />
 
     <meta name="description" content="Thiago Pereira's Web Site" />
     <meta
@@ -56,14 +59,14 @@ const { title } = Astro.props;
           rgb(var(--accent)),
           rgb(32, 9, 126) 40%,
           white 30%
-          );
+        );
 
-        --shadow-strength: .25;
+        --shadow-strength: 0.25;
         --shadow-saturation: 20%;
         --shadow-lightness: 40%;
         --shadow: var(--hue) var(--shadow-saturation) var(--shadow-lightness);
-        --shadow-lg:
-          0.2px 0.5px 0.6px hsl(var(--shadow) / var(--shadow-strength)),
+        --shadow-lg: 0.2px 0.5px 0.6px
+            hsl(var(--shadow) / var(--shadow-strength)),
           1.1px 2.7px 3.3px -0.4px hsl(var(--shadow) / var(--shadow-strength)),
           2.1px 5px 6.1px -0.7px hsl(var(--shadow) / var(--shadow-strength)),
           3.5px 8.3px 10.1px -1.1px hsl(var(--shadow) / var(--shadow-strength)),
@@ -71,7 +74,6 @@ const { title } = Astro.props;
           8.7px 20.7px 25.3px -1.8px hsl(var(--shadow) / var(--shadow-strength)),
           13.3px 31.4px 38.4px -2.1px hsl(var(--shadow) / var(--shadow-strength)),
           19.6px 46.3px 56.6px -2.5px hsl(var(--shadow) / var(--shadow-strength));
-
       }
       p,
       h1,
